--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Ninjas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -16,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
 </head>
 
 <body>
@@ -29,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Link 1</a>
+                        <a class="nav-link active" href="#link1">Link 1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Link 2</a>
+                        <a class="nav-link active" href="#link2">Link 2</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Link 3</a>
+                        <a class="nav-link active" href="#link3">Link 3</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Link 4</a>
+                        <a class="nav-link active" href="#link4">Link 4</a>
                     </li>
                     <li class="nav-item">
                         <button type="button" class="btn btn-outline-dark">Sign Up</button>
@@ -48,7 +48,7 @@
         </nav>
         <div class="container-fluid left">
             <div class="row">
-                <div class="col-lg-5 title">
+                <div class="col-lg-5 col-md-12 title">
                     <h1>CN RECRUITMENT</h1>
                     <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut
@@ -91,9 +91,9 @@
         <div class="bg-circle circle black"></div>
     </section>
 
-    <section class="dark-section">
+    <section class="dark-section" id="link1">
         <div class="row">
-            <div class="col-lg-6 left">
+            <div class="col-lg-6 col-md-12 left">
                 <h2 style="font-size: 2.5rem;">CN RECRUITMENT</h2>
                 <p class="white-text" style="margin: 20px 0 50px;">Lorem ipsum dolor sit amet, consectetur adipiscing
                     elit, sed do eiusmod tempor
@@ -106,7 +106,7 @@
                 <div class="white box"></div>
                 <p class="sm-text white-text">Dhaka Oke, Product Designer</p>
             </div>
-            <div class="col-lg-6 figure">
+            <div class="col-lg-6 col-md-12 figure">
                 <div class="white rectangle" style="right: 0;"></div>
                 <div class="black rectangle" style="bottom: 0;">
                     <div class="square square-2 white"></div>
@@ -118,7 +118,7 @@
         </div>
     </section>
 
-    <section class="grey-section">
+    <section class="grey-section" id="link2">
         <div class="row">
             <div class="col-lg-6" style="padding:0">
                 <div class="left-container">
@@ -147,7 +147,7 @@
             </div>
         </div>
     </section>
-    <section class="white-section">
+    <section class="white-section" id="link3">
         <div class="row">
             <div class="col-lg-6 left">
                 <h2>CN RECRUITMENT</h2>
@@ -165,10 +165,10 @@
                 </div>
             </div>
     </section>
-    <section class="card-section">
+    <section class="card-section" id="link4">
         <div class="card mb-3">
             <div class="row g-0">
-                <div class="col-md-4" style="background-color: #222222;">
+                <div class="col-md-4 figure2" style="background-color: #222222;">
                     <div class="square square-2 white"></div>
                     <div class="triangle white-triangle triangle-7"></div>
                     <div class="triangle black-border-triangle triangle-9"></div>
@@ -216,7 +216,7 @@
             <p class="sm-text">Maria Lopez, VP of Design at Meshery</p>
         </div>
     </section>
-    <section class="grey-section" style="padding: 10% 36%;">
+    <section class="grey-section pad">
         <h3>Ready to get started?</h3>
         <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore
