--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                 <div class="card">
                     <div class="card-body left" style="background-color: #f2f2f2;">
                         <h3 class="card-title">Keys to writing copy that actually converts and sells users</h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        <p class="card-text short1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore
                             et dolore magna aliqua.</p>
-                        <button onclick="myFunction()" style="border: none;">Read More</button>
+                        <button onclick="myFunction1()" style="border: none;">Read More</button>
                     </div>
                 </div>
             </div>
@@ -202,10 +202,10 @@
                 <div class="card">
                     <div class="card-body left" style="background-color: #f2f2f2;">
                         <h3 class="card-title">Keys to writing copy that actually converts and sells users</h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        <p class="card-text short2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore
                             et dolore magna aliqua.</p>
-                        <button onclick="myFunction()" style="border: none;">Read More</button>
+                        <button onclick="myFunction2()" style="border: none;">Read More</button>
                     </div>
                 </div>
             </div>
